syntax = "proto3";

package maple2.server.world.service;

import "google/protobuf/empty.proto";

// The world service definition.
service World {
  // Checks the health of this service
  rpc Health(google.protobuf.Empty) returns (HealthResponse);

  // Migrate out of a server.
  rpc MigrateOut(MigrateOutRequest) returns (MigrateOutResponse);
  // Migrate into a server.
  rpc MigrateIn(MigrateInRequest) returns (MigrateInResponse);
}

message HealthResponse {}

message MigrateOutRequest {
  int64 account_id = 1;
  int64 character_id = 2;
  string machine_id = 3;
}

message MigrateOutResponse {
  string ip_address = 1;
  int32 port = 2;
  fixed64 token = 3;
}

message MigrateInRequest {
  int64 account_id = 1;
  fixed64 token = 3;
  string machine_id = 4;
}

message MigrateInResponse {
  int64 character_id = 1;
}
